# winxdp-rs

./: Cargo.toml  README.md
examples/: xdpsock.rs
src/: afxdp.rs  hookid.rs  lib.rs  xdpapi.rs
src/bindings/: mod.rs  xdpapi.rs
