[package]
name = "winxdp"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "XDP library for high-performance networking on Windows."
repository = "https://github.com/shellrow/winxdp-rs"
readme = "README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = ["Win32_Foundation","Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"]
